--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section id="promotional">
       <figure>
         <video controls>
-          <source src="videos/real-estate.mp4" type="video/mp4"> 
+          <source src="videos/real-estate.mp4" type="video/mp4">
           <source src="videos/real-estate.ogv" type="video/ogg">
           Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
         </video>
@@ -40,7 +40,7 @@
     </section>
 
     <section id="details">
-      <div>
+      <div class="wrapper">
         <div>
           <h3>Contact</h3>
           <p>
