--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
     </section>
 
-    <section id="promotional">
+    <section id="promotional" class="col-2 first">
       <figure>
         <video controls>
           <source src="videos/real-estate.mp4" type="video/mp4">
@@ -41,7 +41,7 @@
 
     <section id="details">
       <div class="wrapper">
-        <div>
+        <div class="col-1 first">
           <h3>Contact</h3>
           <p>
             email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
@@ -55,7 +55,7 @@
           </address>
         </div>
 
-        <div>
+        <div class="col-1">
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
@@ -65,7 +65,7 @@
         </div>
 
         <div>
-          <h3>Follow</h3>
+          <h3 class="col-1">Follow</h3>
           <p>
             <a href="#" target="_blank">Youtube</a><br>
             <a href="#" target="_blank">Facebook</a><br>
